--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.5.0",
+    "body-parser": "^1.18.2",
     "bower": "^1.8.2",
-    "express": "^4.15.4"
+    "ejs": "https://registry.npmjs.org/ejs/-/ejs-2.5.7.tgz",
+    "express": "^4.15.4",
+    "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
+    "standard": "^10.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
